docs/directorymanager/11.1/directorymanager/admincenter/portal/displaytype/overview.md
# Design a Portal with Display Types

Display types enable you to control the layout and appearance of a Directory Manager portal and its
pages. They also enable you to expose the required functionality and data fields in the portal.

You can associate multiple identity stores with a portal and design a different portal for each
identity store. Adding links to the navigation bar, adding pages to the portal, and adding fields to
pages are some customization examples. In this way, the portal offers a different design and
functionality for each associated identity store.

You can customize the following for a portal:

- **Search Forms:** control the fields to be displayed on different search forms and search result
  pages in a portal. See the [Customize Search Forms](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/form/searchforms.md) and
  [Customize Search Results](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/form/searchresults.md) topics.
- **Quick Search:** control the schema attributes for quick search to run on. See the
  [Customize Quick Search](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/form/quicksearch.md) topic.
- **Properties:** control what properties of directory objects you want to display in a portal. See
  the [Customize Properties Pages](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/objectproperties.md) topic.
- **Toolbars:** customize the buttons on the portal toolbars. See the
  [Customize the Toolbars](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/toolbars.md) topic.
- **Navigation Bar:** customize the left navigation bar in a portal. See the
  [Customize the Navigation Bar](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/navigationbar.md) topic.
- **Bad Words List:** restrict users from entering bad or offensive words while using a portal. See
  the [Manage the Bad Words List](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/badwords.md) topic.
- **Import/Export Attributes:** specify schema attributes to be used for importing/exporting members
  and additional owners for groups. See the
  [Specify Attributes for Import/Export of Group Owners and Members](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/importexport.md):
  topic.
- **Create Object Wizards:** control the schema attributes displayed in the portal for creating
  different object types. See the
  [Customize the Create Object Wizards](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/createobject.md) topic.
- **Query Attributes:** control which schema attributes to display in the portal for creating
  queries for Smart Groups ad Dynasties. See the
  [ Specify Smart Group Query Attributes](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/queryattributes.md) topic.
- **Property Validation:** manage the schema attributes for user profile validation and group
  attestation. See the [Manage Property Validation Attributes](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/propertyvalidation.md)
  topic.
- **Organizational Hierarchy:** specify user attributes for display on the organizational hierarchy
  chart. See the
  [Specify Attributes for Organizational Hierarchy](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/organizationalhierarchy.md) topic.
- **Card View:** specify the attributes to be displayed on an object card. See the
  [Specify Attributes for the Object Card](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/objectcard.md) topic.
- **Object List View:** specify the attributes to be displayed for similar groups on the **Similar
  Groups** tab in group properties. See the
  [Specify Attributes for Object List View](/docs/directorymanager/11.1/directorymanager/admincenter/portal/design/objectlist.md) topic.

NOTE: Design settings are available for a standard Directory Manager portal, and not for a
Self-Service Password Reset portal.

**See Also**

- [Display Type Categories](/docs/directorymanager/11.1/directorymanager/admincenter/portal/displaytype/categories.md)
- [Define Custom Display Types](/docs/directorymanager/11.1/directorymanager/admincenter/portal/displaytype/custom.md)
